fix second section mobile

--- a/inc/assets/sass/responsive.scss
+++ b/inc/assets/sass/responsive.scss
@@ -709,7 +709,7 @@
 			.hover-cat {
 				top: -17%;
 			}
-			.hover-cat-bottom {
+			.hover-cat.hover-cat-bottom {
 				top: 102% !important;
 			}
 		}
